# llm-virtual-world-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: demo_replay.json
src/virtual_world_agent/: __init__.py  agents.py  cli.py  runner.py  world.py
tests/: test_world.py
web/: app.js  index.html  styles.css
