[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "virtual-world-agent"
version = "0.1.0"
description = "An LLM agent harness for a small virtual grid world."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Varshnay Sinha" }]
license = { text = "MIT" }
keywords = ["llm", "agent", "grid-world", "virtual-world"]
dependencies = []

[project.scripts]
virtual-world-agent = "virtual_world_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
